testdata/snapshots/slatedb__row_codec__tests__row with both timestamps_decoded.snap
---
source: src/row_codec.rs
expression: decoded
snapshot_kind: text
---
SstRowEntry {
    key_prefix_len: 5,
    key_suffix: b"both",
    seq: 100,
    expire_ts: Some(
        9876543210,
    ),
    create_ts: Some(
        1234567890,
    ),
    value: Value(
        b"value",
    ),
}
