testdata/snapshots/slatedb__row_codec__tests__row with both timestamps_encoded.snap
---
source: src/row_codec.rs
expression: encoded_data
snapshot_kind: text
---
[
    0,
    5,
    0,
    4,
    98,
    111,
    116,
    104,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    100,
    6,
    0,
    0,
    0,
    2,
    76,
    176,
    22,
    234,
    0,
    0,
    0,
    0,
    73,
    150,
    2,
    210,
    0,
    0,
    0,
    5,
    118,
    97,
    108,
    117,
    101,
]
