testdata/snapshots/slatedb__row_codec__tests__row with only create_ts.snap
---
source: src/row_codec.rs
expression: output
snapshot_kind: text
---
(
    "row with only create_ts",
    [
        0,
        4,
        0,
        6,
        99,
        114,
        101,
        97,
        116,
        101,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        50,
        4,
        0,
        0,
        0,
        0,
        73,
        150,
        2,
        210,
        0,
        0,
        0,
        10,
        116,
        101,
        115,
        116,
        95,
        118,
        97,
        108,
        117,
        101,
    ],
    SstRowEntry {
        key_prefix_len: 4,
        key_suffix: b"create",
        seq: 50,
        expire_ts: None,
        create_ts: Some(
            1234567890,
        ),
        value: Value(
            b"test_value",
        ),
    },
    b"timecreate",
)
