testdata/snapshots/slatedb__row_codec__tests__row with only create_ts_decoded.snap
---
source: src/row_codec.rs
expression: decoded
snapshot_kind: text
---
SstRowEntry {
    key_prefix_len: 4,
    key_suffix: b"create",
    seq: 50,
    expire_ts: None,
    create_ts: Some(
        1234567890,
    ),
    value: Value(
        b"test_value",
    ),
}
