testdata/snapshots/slatedb__row_codec__tests__row with only create_ts_encoded.snap
---
source: src/row_codec.rs
expression: encoded_data
snapshot_kind: text
---
[
    0,
    4,
    0,
    6,
    99,
    114,
    101,
    97,
    116,
    101,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    50,
    4,
    0,
    0,
    0,
    0,
    73,
    150,
    2,
    210,
    0,
    0,
    0,
    10,
    116,
    101,
    115,
    116,
    95,
    118,
    97,
    108,
    117,
    101,
]
