testdata/snapshots/slatedb__row_codec__tests__row with only create_ts_full_key.snap
---
source: src/row_codec.rs
expression: "decoded.restore_full_key(&Bytes::from(tc.first_key))"
snapshot_kind: text
---
b"timecreate"
