testdata/snapshots/slatedb__row_codec__tests__tombstone row.snap
---
source: src/row_codec.rs
expression: output
snapshot_kind: text
---
(
    "tombstone row",
    [
        0,
        4,
        0,
        4,
        116,
        111,
        109,
        98,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        7,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        2,
    ],
    SstRowEntry {
        key_prefix_len: 4,
        key_suffix: b"tomb",
        seq: 1,
        expire_ts: None,
        create_ts: Some(
            2,
        ),
        value: Tombstone,
    },
    b"deadtomb",
)
