testdata/snapshots/slatedb__row_codec__tests__tombstone row_decoded.snap
---
source: src/row_codec.rs
expression: decoded
snapshot_kind: text
---
SstRowEntry {
    key_prefix_len: 4,
    key_suffix: b"tomb",
    seq: 1,
    expire_ts: None,
    create_ts: Some(
        2,
    ),
    value: Tombstone,
}
