testdata/snapshots/slatedb__row_codec__tests__tombstone row_encoded.snap
---
source: src/row_codec.rs
expression: encoded_data
snapshot_kind: text
---
[
    0,
    4,
    0,
    4,
    116,
    111,
    109,
    98,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    7,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    2,
]
