testdata/snapshots/slatedb__row_codec__tests__unicode key suffix.snap
---
source: src/row_codec.rs
expression: output
snapshot_kind: text
---
(
    "unicode key suffix",
    [
        0,
        3,
        0,
        12,
        228,
        189,
        160,
        229,
        165,
        189,
        228,
        184,
        150,
        231,
        149,
        140,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        0,
        0,
        5,
        118,
        97,
        108,
        117,
        101,
    ],
    SstRowEntry {
        key_prefix_len: 3,
        key_suffix: b"\xe4\xbd\xa0\xe5\xa5\xbd\xe4\xb8\x96\xe7\x95\x8c",
        seq: 1,
        expire_ts: None,
        create_ts: None,
        value: Value(
            b"value",
        ),
    },
    b"uni\xe4\xbd\xa0\xe5\xa5\xbd\xe4\xb8\x96\xe7\x95\x8c",
)
